--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 
     <html>
 <head>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -16,6 +21,11 @@
 
                 <a id="play-video" class="video-play-button" href="#" data-toggle="modal" data-target=".bd-example-modal-lg">
                     <span></span>
+                    <div class="waves-block">
+                        <div class="waves wave-1"></div>
+                        <div class="waves wave-2"></div>
+                        <div class="waves wave-3"></div>
+                    </div>
                 </a>
 
                 <div id="video-overlay" class="video-overlay">
@@ -54,6 +64,7 @@
     
 
 </section>
+<section class="border-visuals0"></section>
 <section class="border-visuals1"></section>
       <div class="container">
   <div class="row">
@@ -114,10 +125,10 @@
                     <div data-target="#carousel" data-slide-to="7" class="thumb"><img src="./assets/imgs/house8.jpg"></div>
                 </div><!-- /item -->
                 <div class="item">
-                    <div data-target="#carousel" data-slide-to="4" class="thumb"><img src="./assets/imgs/house9.jpg"></div>
-                    <div data-target="#carousel" data-slide-to="5" class="thumb"><img src="./assets/imgs/house10.jpg"></div>
-                    <div data-target="#carousel" data-slide-to="6" class="thumb"><img src="./assets/imgs/house11.jpg"></div>
-                    <div data-target="#carousel" data-slide-to="7" class="thumb"><img src="./assets/imgs/house12.jpg"></div>
+                    <div data-target="#carousel" data-slide-to="8" class="thumb"><img src="./assets/imgs/house9.jpg"></div>
+                    <div data-target="#carousel" data-slide-to="9" class="thumb"><img src="./assets/imgs/house10.jpg"></div>
+                    <div data-target="#carousel" data-slide-to="10" class="thumb"><img src="./assets/imgs/house11.jpg"></div>
+                    <div data-target="#carousel" data-slide-to="11" class="thumb"><img src="./assets/imgs/house12.jpg"></div>
                 </div><!-- /item -->
             </div><!-- /carousel-inner -->
             <a class="left carousel-control" href="#thumbcarousel" role="button" data-slide="prev">
@@ -131,13 +142,13 @@
     </div> <!-- /col-sm-6 -->
     <div class="col-sm-6">
         <h2>96 Patterson Cres</h2>
-        <h3>For rent: 2200/month</h3>
+        <h3>For rent: $2200 / Month</h3>
         <p>Welcome to 96 Patterson Cres in Carleton Place! Situated in a fantastic location! This 3 bedroom 2 bathroom bungalow is within minutes from the river walking tails, bike paths, parks, school, shopping and hospital! This sundrenched home boasts an open concept floor plan with two bedrooms and 4-pc bath on the main level. Generous sized primary bedroom has huge walk in closet and patio door to the upper balcony. Lower level complete with a large family room, 3rd bedroom 4-pc bath and walkout basement. Lots of storage and your very own workshop or craft room at the back. With no rear neighbors, you will love the privacy you have. Home has been lovingly cared for over the years.
         </p>
         <h3>About 96 Patterson</h3>
         <p>Carleton Place, Ontario K7C 4P3</p>
         <p>Directions: From McNelly to Patterson Cres</p>
-        <p>Availability: 2022 Aughust Onwards</p>
+        <p>Availability: August 2nd, 2022</p>
 
     </div> <!-- /col-sm-6 -->
   </div> <!-- /row -->
@@ -151,7 +162,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">Email us at  
-       <a href="#">Placeholder@gmail.com</a>.
+       <a href="#">khateebzaidi@hotmail.com</a>.
           </p>
         </div>
 
